--- a/capstone1/signup.html
+++ b/capstone1/signup.html
@@ -43,7 +43,7 @@
 						<a class="nav-link textsize" href="#"><b>Home</b></a>
 					</li>	
 					<li>				
-						<a class="nav-link textsize" href="#"><b>Gallery</b></a>
+						<a class="nav-link textsize" href="featured_pets"><b>Featured Pets</b></a>
 					</li>	
 					<li>				
 						<a class="nav-link textsize" href="#"><b>FAQS</b></a>
