--- a/capstone1/featured_pets.html
+++ b/capstone1/featured_pets.html
@@ -20,7 +20,7 @@
 	crossorigin="anonymous">
 
 	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 	<!-- animate css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
@@ -29,7 +29,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
-<body>
+<body id="pets">
 
 	<div class="container-fluid px-0">
 		<nav class="navbar navbar-fixed navbar-expand-lg navbar-light bg-success">
@@ -41,7 +41,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link textsize" href="#"><b>Home</b></a>
+						<a class="nav-link textsize" href="index.html"><b>Home</b></a>
 					</li>	
 					<li>				
 						<a class="nav-link textsize" href="#"><b>Featured Pets</b></a>
@@ -57,7 +57,7 @@
 		</nav>
 	</div>
 
-	<section id="pets" class="pb-5">
+	<section  class="pb-5">
 	    <div class="container">
 	        <h5 class="section-title h1">featured pets</h5>
 	        <div class="row">
@@ -158,25 +158,26 @@
 	                </div>
 	            </div>
 	        </div>
-	    </div>
-	</section>
-
-
-	<div class="container-fluid bg-success">
-		<div class="row">
-			<div class="col-10">
-				<footer class="footer ">
-					<p class="lead">Copyright &copy; My site 2018</p>
-				</footer>
-			</div>
-			<div class="col-2">
-				<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square fa-spin fa-lg mr-2"></i></a>
-				<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-spin fa-lg mr-2"></i></a>
-				<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-spin fa-lg mr-2"></i></a>
-				<a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-spin fa-lg mr-2"></i></a>
-			</div>
 		</div>
-	</div>
+
+    
+	</section>
+			<footer class="footer bg-success footerReg">
+				<div class="d-flex bd-highlight">
+				  <div class="p-2 flex-grow-1 bd-highlight">
+				  	<span class="text-muted">Copyright &copy; My site 2018</span>
+				  </div>
+				  <div class="p-2 bd-highlight">
+				  	<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-spin fa-lg mr-auto"></i></a>
+				  </div>
+				</div>
+			</footer>
+
+
+
 
 
 
