--- a/capstone1/registration.html
+++ b/capstone1/registration.html
@@ -12,15 +12,12 @@
 	<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 
-	<!-- external css -->
-	
-
 	<!-- fontawesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" 
 	crossorigin="anonymous">
 
 	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 	<!-- animate css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
@@ -40,7 +37,7 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link textsize" href="#"><b>Home</b></a>
+						<a class="nav-link textsize" href="index.html"><b>Home</b></a>
 					</li>	
 					<li>				
 						<a class="nav-link textsize" href="featured_pets.html"><b>Featured Pets</b></a>
@@ -59,7 +56,7 @@
 	<div class="container-fluid register">
 		<div class="row">
 			<div class="col-lg-7 col-md-6 col-sm-4"></div>
-			<div class="col-lg-5 col-md-6 col-sm-8 my-5">
+			<div class="col-lg-5 col-md-12 col-sm-12 my-5">
 
 				<form>
 				  <div class="form-group">
@@ -89,7 +86,7 @@
 					    <div class="modal-content">
 					      <div class="modal-header">
 					        <h5 class="modal-title">Terms & Privacy</h5>
-					        <button type="button" class="close" data-dismiss="modal">&times;</button>
+					        <button type="button" class="close m-1" data-dismiss="modal">&times;</button>
 					      </div>
 					      <div class="modal-body">
 						        <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -113,7 +110,28 @@
 		</div>	
 	</div>	
 
-	<div class="container-fluid bg-success">
+
+
+
+			<footer class="footer bg-success footerReg">
+				<div class="d-flex bd-highlight">
+				  <div class="p-2 flex-grow-1 bd-highlight">
+				  	<span class="text-muted">Copyright &copy; My site 2018</span>
+				  </div>
+				  <div class="p-2 bd-highlight">
+				  	<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-spin fa-lg mr-auto"></i></a>
+				  </div>
+				</div>
+			</footer>
+
+
+
+
+
+<!-- 	<div class="container-fluid bg-success">
 		<div class="row">
 			<div class="col-10">
 				<footer class="footer ">
@@ -128,7 +146,7 @@
 			</div>
 		</div>
 	</div>
-
+ -->
 
 
 
