--- a/capstone1/index.html
+++ b/capstone1/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 
-	<title>Capstone 1</title>
+	<title>Home</title>
 
 		<!-- bootstrap css -->
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
@@ -20,25 +20,105 @@
 	crossorigin="anonymous">
 
 	<!-- google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 
 	<!-- animate css -->
 	<link rel="stylesheet" href="assets/css/animate.css">
 
 </head>
-<body>
+<body class="bg-success">
 
-<!-- Block level -->
-<div class="row">
-  <div class="col-2 text-truncate">
-    Praeterea iter est quasdam res quas ex communi.
-  </div>
-</div>
+	<div class="container-fluid px-0">
+		<nav class="navbar navbar-fixed navbar-expand-lg navbar-light bg-success">
 
-<!-- Inline level -->
-<span class="d-inline-block text-truncate" style="max-width: 150px;">
-  Praeterea iter est quasdam res quas ex communi.
-</span>
+			<button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item">
+						<a class="nav-link textsize" href="#"><b>Home</b></a>
+					</li>	
+					<li>				
+						<a class="nav-link textsize" href="featured_pets.html"><b>Featured Pets</b></a>
+					</li>	
+					<li>				
+						<a class="nav-link textsize" href="#"><b>FAQS</b></a>
+					</li>
+					<li>					
+						<a class="nav-link textsize" href="registration.html"><b>Register</b></a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+
+		<div class="container-fluid px-0" id="contLand">
+			<div id="carouselIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+			    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+			  </ol>
+			  <div class="carousel-inner" id="inner">
+			    <div class="carousel-item active">
+			      <img class="d-block w-100 img-fluid" src="assets/images/slide1.jpg" id="image1">
+			      <div class="carousel-caption">
+			      	<h2 class="animated jello infinite display-2">LOVE ME</h2>
+			      </div>
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100 img-fluid" src="assets/images/slide2a.jpg" id="image2">
+			      <div class="carousel-caption">
+			      	<h2 class="animated swing infinite display-2">HUG ME</h2>
+			      </div>	      
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100 img-fluid" src="assets/images/slide3.jpg" id="image3">
+			      <div class="carousel-caption">
+			      	<h2 class="animated rubberBand infinite display-2">CUDDLE ME</h2>
+			      </div>	      
+			    </div>
+			  </div>
+			  <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+			    <span class="carousel-control-prev-icon"></span>
+			    <span class="sr-only">Previous</span>
+			  </a>
+			  <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+			    <span class="carousel-control-next-icon"></span>
+			    <span class="sr-only">Next</span>
+			  </a>
+			</div>				
+
+
+			<footer class="footer bg-success footerReg">
+				<div class="d-flex bd-highlight">
+				  <div class="p-2 flex-grow-1 bd-highlight">
+				  	<span class="text-muted">Copyright &copy; My site 2018</span>
+				  </div>
+				  <div class="p-2 bd-highlight">
+				  	<a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-square fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://instagram.com" target="_blank"><i class="fab fa-instagram fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter fa-spin fa-lg mr-auto"></i></a>
+						<a href="https://youtube.com" target="_blank"><i class="fab fa-youtube fa-spin fa-lg mr-auto"></i></a>
+				  </div>
+				</div>
+			</footer>
+
+
+
+		</div>
+
+
+	
+
+
+
+
+
+
+
 
 
 
